91
-- eliminated more RULE_OPTION_TYPE_*
-- converted remaining rule options over to use cursor
-- added IpsOption CursorActionType
-- finally eliminated doe_ptr and friends ... yay!
-- merged ips_option_base64_{data,decode}.cc
-- fast_pattern_only (previously fast_pattern:only) is gone
   (delete the option, Snort will figure it out)

90
-- added InspectApi.buffers and Inspector::getbuf()
-- changed http_* rule options to use Inspector::getbuf()
-- changed luajit rule option to use the cursor

89
-- pulled in the latest from tom and josh

88
-- overhauled content and pcre detection to use Cursor
-- http_* are now first class rule options
-- removed experimental contents and get_buf() from InspectApi
-- changed call to acquire daq with count 0 (all)
-- changed replace to be 1st class rule option
-- split boyer-moore functions out of mstring module

87
-- renamed api function typedefs to camel case for consistency and to match
   style guide
-- fixed some Xcode static analysis issues
-- removed http_encode rule option
-- removed ftpbounce rule option
-- removed examples/
-- pulled in latest from Tom with start line changes

86
-- pulled in tom's latest nhttp_inpsect code

85
-- swapped use of range and deflt for PT_TABLE and PT_LIST Parameters
   (Parameter* is now in range so that deflt may be used for tabl/list
   defaults)
-- removed -b, -N, -Z and, --perfmon-file options
-- removed uricontent ips rule option
-- added contents and getbuf to InspectApi for content buffers


84
-- pulled in latest codecs
-- removed src/mempool/
-- converted attribute table from xml to lua
-- removed lex/yacc foo from configure.ac

83
-- fixed linux linker ordering

82
-- fixed atom splitter instantiation for fallback in tcp_session.cc

81
-- deleted service registration for paf
-- added StreamSplitter to Inspector
-- added service name to InspectApi
-- deleted ports configs from inspector
-- added port-based bindings lookups

80