@@ -139,7 +139,6 @@ void snort_inspect(Packet* p)
         /*
         **  Reset the appropriate application-layer protocol fields
         */
-        ClearHttpBuffers();
         p->alt_dsize = 0;
         DetectReset();
 
