@@ -1,3 +1,7 @@
+92
+-- fixed fast_pattern only auto configuration
+-- more detection buffer cleanup
+
 91
 -- eliminated more RULE_OPTION_TYPE_*
 -- converted remaining rule options over to use cursor
@@ -5,7 +9,6 @@
 -- finally eliminated doe_ptr and friends ... yay!
 -- merged ips_option_base64_{data,decode}.cc
 -- fast_pattern_only (previously fast_pattern:only) is gone
-   (delete the option, Snort will figure it out)
 
 90
 -- added InspectApi.buffers and Inspector::getbuf()
